add target blank

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li>
         <a
           href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CatPhotoApp/index.html"
+          target="_blank"
           >CatPhotoApp</a
         >
       </li>
