--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <title>List of freeCodeCamp projects</title>
   </head>
   <body>
-    <h1>List of freeCodeCamp projects</h1>
-    <ol>
-      <li>
-        <a
-          href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CatPhotoApp/index.html"
-          target="_blank"
-          >CatPhotoApp</a
-        >
-      </li>
-    </ol>
+    <h1>Leisure coding activities</h1>
+
+    <a href="https://www.freecodecamp.org/sumanghimire79" target="_blank"
+      >freeCodeCamp profile</a
+    >
+
+    <fieldset>
+      <legend>freeCodeCamp projects on github</legend>
+      <ol>
+        <li>
+          <a
+            href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CatPhotoApp/index.html"
+            target="_blank"
+            >CatPhotoApp</a
+          >
+        </li>
+      </ol>
+    </fieldset>
   </body>
 </html>
