Add link to CafeMenu

--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>List of freeCodeCamp projects</title>
-  </head>
-  <body>
-    <h1>Leisure coding activities</h1>
 
-    <a href="https://www.freecodecamp.org/sumanghimire79" target="_blank"
-      >freeCodeCamp profile</a
-    >
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>List of freeCodeCamp projects</title>
+</head>
 
-    <fieldset>
-      <legend>freeCodeCamp projects on github</legend>
-      <ol>
-        <li>
-          <a
-            href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CatPhotoApp/index.html"
-            target="_blank"
-            >CatPhotoApp</a
-          >
-        </li>
-      </ol>
-    </fieldset>
-  </body>
+<body>
+  <h1>Leisure coding activities</h1>
+
+  <a href="https://www.freecodecamp.org/sumanghimire79" target="_blank">freeCodeCamp profile</a>
+
+  <fieldset>
+    <legend>freeCodeCamp projects on github</legend>
+    <ol>
+      <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CatPhotoApp/index.html"
+          target="_blank">CatPhotoApp</a>
+      </li>
+      <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CafeMenu/index.html"
+          target="_blank">CafeMenu</a>
+      </li>
+    </ol>
+  </fieldset>
+</body>
+
 </html>
