Added html content, css content and a link to root intex.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CafeMenu/index.html"
           target="_blank">CafeMenu</a>
       </li>
+      <li>
+        <a href="https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CSSColorMarkers/index.html"
+          target="_blank">CSSColorMarkers</a>
+      </li>
     </ol>
   </fieldset>
 </body>
