Add link to root index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           target="_blank">CafeMenu</a>
       </li>
       <li>
-        <a href="https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CSSColorMarkers/index.html"
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CSSColorMarkers/index.html"
           target="_blank">CSSColorMarkers</a>
       </li>
     </ol>
