Added RegistrationForm link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CSSColorMarkers/index.html"
           target="_blank">CSSColorMarkers</a>
       </li>
+      <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/RegistrationForm/index.html"
+          target="_blank">RegistrationForm</a>
+      </li>
     </ol>
   </fieldset>
 </body>
