--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/RegistrationForm/index.html"
           target="_blank">RegistrationForm</a>
       </li>
+      <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/FlexboxPhotoGallery/index.html"
+          target="_blank">FlexboxPhotoGallery</a>
+      </li>
     </ol>
   </fieldset>
 </body>
