Add AccessibilityWebpage link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/FlexboxPhotoGallery/index.html"
           target="_blank">FlexboxPhotoGallery</a>
       </li>
+      <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/AccessibilityWebpage/index.html/index.html"
+          target="_blank">AccessibilityWebpage (ARIA attributes)</a>
+      </li>
     </ol>
   </fieldset>
 </body>
