Added CitySkyline link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <legend>freeCodeCamp projects on github</legend>
     <ol>
       <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CitySkyline/index.html"
+          target="_blank">City Sky Line</a>
+      </li>
+      <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/piano/index.html"
           target="_blank">Piano</a>
       </li>
