Added link for DisplayGrid

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           target="_blank">CatPhotoApp</a>
       </li>
       <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/DisplayGrid/index.html"
+          target="_blank">Display Grid</a>
+      </li>
+      <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CafeMenu/index.html"
           target="_blank">CafeMenu</a>
       </li>
