Added Rotating Ccolor Wheel link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           target="_blank">City Sky Line</a>
       </li>
       <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/RotatingColorWheel/index.html"
+          target="_blank">Rotating Color Wheel</a>
+      </li>
+      <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/piano/index.html"
           target="_blank">Piano</a>
       </li>
@@ -34,23 +38,23 @@
       </li>
       <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CafeMenu/index.html"
-          target="_blank">CafeMenu</a>
+          target="_blank">Cafe Menu</a>
       </li>
       <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/CSSColorMarkers/index.html"
-          target="_blank">CSSColorMarkers</a>
+          target="_blank">CSS Color Markers</a>
       </li>
       <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/RegistrationForm/index.html"
-          target="_blank">RegistrationForm</a>
+          target="_blank">Registration Form</a>
       </li>
       <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/FlexboxPhotoGallery/index.html"
-          target="_blank">FlexboxPhotoGallery</a>
+          target="_blank">Flexbox Photo Gallery</a>
       </li>
       <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/AccessibilityWebpage/index.html/index.html"
-          target="_blank">AccessibilityWebpage (ARIA attributes)</a>
+          target="_blank">Accessibility Web-page (ARIA attributes)</a>
       </li>
     </ol>
   </fieldset>
