Added Penguin link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           target="_blank">Rotating Color Wheel</a>
       </li>
       <li>
+        <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/Penguin/index.html"
+          target="_blank">Penguin</a>
+      </li>
+      <li>
         <a href="https://htmlpreview.github.io/?https://github.com/sumanghimire79/freeCodeCamp-projects/blob/main/piano/index.html"
           target="_blank">Piano</a>
       </li>
